Time tracking dashboard, fix card stretch

--- a/11-time-tracking-dashboard/time-tracking-dashboard-main/style.less
+++ b/11-time-tracking-dashboard/time-tracking-dashboard-main/style.less
@@ -222,6 +222,7 @@ body {
     gap: var(--spacing-100);
     padding: var(--spacing-300);
     background-color: var(--navy-900);
+    height: 100%;
 
     @media (min-width: 600px) {
         gap: var(--spacing-200);
